--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,9 @@
   <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css">
   <script src="https://maps.googleapis.com/maps/api/js?key=18c85a44a76042788847e2fb74d27386"></script> 
   <!-- <script defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=18c85a44a76042788847e2fb74d27386&libraries=places&callback=initMap"></script> -->
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 </head>
-<body class="mat-typography surface-100">
+<body class="mat-typography surface-100 ig-typography ig-scrollbar">
   <app-root></app-root>
 </body>
 </html>
